--- a/src/app/components/admin/loanreq/loanreq.component.html
+++ b/src/app/components/admin/loanreq/loanreq.component.html
@@ -89,7 +89,7 @@
                                   value="{{ loanDetailsObj.customerAccountInfo.organizationAddress }}" disabled>
                           </div>
                       </ng-container>
-                      <ng-container *ngIf="loanDetailsObj.customerAccountInfo.empType =='Self Employed'">
+                      <ng-container *ngIf="loanDetailsObj.customerAccountInfo.empType =='self-employed'">
                           <div class="mb-3">
                               <label for="exampleFormControlInput1" class="form-label fw-bold">Occupation Name</label>
                               <input type="email" class="form-control" id="exampleFormControlInput1"
@@ -100,6 +100,7 @@
                               <input type="email" class="form-control" id="exampleFormControlInput1"
                                   value="{{ loanDetailsObj.customerAccountInfo.occupationAddress }}" disabled>
                           </div>
+                          
                       </ng-container>
                   </div>
               </div>
@@ -134,6 +135,7 @@
                       <label class="form-label fw-bold">Loan EMI</label>
                       <input type="text" class="form-control" value="&#x20B9;{{loanDetailsObj.loanDetails.loanEmi}}" disabled>
                     </div>
+                    
                   </div>
                   <div class="col-lg-6 col-md-6 col-12">
                     
@@ -171,10 +173,10 @@
                       <label class="form-label fw-bold">Vendor Address</label>
                       <input type="text" class="form-control" value="{{loanDetailsObj.loanDetails.vendorAddress}}" disabled>
                     </div>
-                    <div *ngIf="loanDetailsObj.loanDetails.loanType=='vehicleLoan'" class="mb-3">
+                    <!-- <div *ngIf="loanDetailsObj.loanDetails.loanType=='vehicleLoan'" class="mb-3">
                       <label class="form-label fw-bold">Vendor Name</label>
                       <input type="text" class="form-control" value="{{loanDetailsObj.loanDetails.vendorName}}" disabled>
-                    </div>
+                    </div> -->
                 
                     <div *ngIf="loanDetailsObj.loanDetails.loanType=='personalLoan'" class="mb-3">
                       <label class="form-label fw-bold">Loan Purpose</label>
@@ -185,10 +187,10 @@
                       <input type="text" class="form-control" value="{{loanDetailsObj.loanDetails.ongoingLoan}}" disabled>
                     </div>
                 
-                    <div *ngIf="loanDetailsObj.loanDetails.loanType=='educationLoan'" class="mb-3">
+                    <!-- <div *ngIf="loanDetailsObj.loanDetails.loanType=='educationLoan'" class="mb-3">
                       <label class="form-label fw-bold">Education Type</label>
                       <input type="text" class="form-control" value="{{loanDetailsObj.loanDetails.educationType}}" disabled>
-                    </div>
+                    </div> -->
                     <div *ngIf="loanDetailsObj.loanDetails.loanType=='educationLoan'" class="mb-3">
                       <label class="form-label fw-bold">Course Name</label>
                       <input type="text" class="form-control" value="{{loanDetailsObj.loanDetails.courseName}}" disabled>
@@ -204,6 +206,10 @@
                     <div *ngIf="loanDetailsObj.loanDetails.loanType=='educationLoan'" class="mb-3">
                       <label class="form-label fw-bold">Total Fee</label>
                       <input type="text" class="form-control" value="&#x20B9;{{loanDetailsObj.loanDetails.totalFee}}" disabled>
+                    </div>
+                    <div class="mb-3">
+                      <label class="form-label fw-bold">Available EMI</label>
+                      <input type="text" class="form-control" value="&#x20B9;{{availableEmi}}" disabled>
                     </div>
                       
                   </div>
