--- a/src/app/components/client/home/home.component.html
+++ b/src/app/components/client/home/home.component.html
@@ -61,7 +61,7 @@
                   <div class="card text-light text-center bg-white pb-2">
                       <div class="card-body text-dark">
                         <div class="img-area mb-4">
-                            <img src="https://www.elearnmarkets.com/site/assets/img/calculator_icon/Banner-Icon.png" class="img-fluid" alt="" style="height:160px;width: 100%;">
+                            <img src="https://www.elearnmarkets.com/site/assets/img/calculator_icon/Banner-Icon.png" class="img-fluid" alt="" style="height:185px;width: 100%;">
                         </div>
                           <h4 class="card-title">Loan Calculator</h4>
                           <p>Calculate your Loan EMI based on different loan, for specific amount, tenure and rate of interest. Our Bank provide best interest rate.</p><hr>
@@ -78,7 +78,7 @@
                               <img src="https://paytmblogcdn.paytm.com/wp-content/uploads/2021/07/Creditcard_12_Credit-Card-Loan-Vs-Personal-Loan-800x500.png" class="img-fluid" alt="">
                           </div>
                             <h4 class="card-title">Loan</h4>
-                            <p>We offer a wide range of loan options to suit your unique needs and financial situation ,we have the right loan for you.</p><hr>
+                            <p>We offer a wide range of loan options to suit your unique needs and financial situation ,we have the right loan for you with best interest options.</p><hr>
                             <button class="btn bg-primary text-light"><a routerLink="loantype"  class="btn-dec card-title" style="width: 50px;height: 10px;">Apply </a></button>
                             
                         </div>
@@ -92,7 +92,7 @@
                               <img src="https://img.freepik.com/premium-vector/time-is-money-business-finance-concept-quick-payment-clock-cash-fast-loan-easy-credit-time-money-saving-timer-finance-quick-money-3d-rendering-vector-illustration_165488-3904.jpg" class="img-fluid" alt="">
                           </div>
                             <h4 class="card-title">Loan Status</h4>
-                            <p>Track your Loan application and know step by step  updates  about your application and enjoy our service.</p><hr>
+                            <p>Track your Loan application and know step by step  updates  about your application and build a better financial status.</p><hr>
                             <button class="btn bg-primary text-light"><a type="button"  class="btn-dec card-title" data-bs-toggle="modal" data-bs-target="#exampleModal" style="width: 50px;height: 10px;">View</a></button>
                         </div>
                     </div>
