--- a/src/app/components/admin/loanreq/loanreq.component.html
+++ b/src/app/components/admin/loanreq/loanreq.component.html
@@ -59,7 +59,7 @@
                   <div class="col-lg-6 col-md-12 col-12">
                       <div class="mb-3">
                           <label for="exampleFormControlInput1" class="form-label fw-bold">Email ID</label>
-                          <input type="email" class="form-control" id="exampleFormControlInput1"
+                          <input type="email" class="form-control" id="exampleFormControlInput1" style="text-transform: lowercase;"
                               value="{{ loanDetailsObj.customerAccountInfo.email }}" disabled>
                       </div>
                       <div class="mb-3">
