--- a/src/app/components/admin/allloans/allloans.component.html
+++ b/src/app/components/admin/allloans/allloans.component.html
@@ -185,7 +185,7 @@
                 <td>{{loan.interest}}%</td>
                 <td>&#x20B9;{{loan.otherEmi}}</td>
                 <td>&#x20B9;{{loan.loanEmi}}</td>
-                <td>&#x20B9;{{loan.loanStatus}}</td>
+                <td>{{loan.loanStatus}}</td>
 
               </tr>
             </tbody>
