--- a/src/app/components/client/home/home.component.html
+++ b/src/app/components/client/home/home.component.html
@@ -53,7 +53,7 @@
                           </div>
                             <h4 class="card-title">Check Eligibilty</h4>
                             <p>Eligibility criteria to get a loan varies based on the type of loan.So check  eligibility and apply for the right loan with better interest rate .</p><hr>
-                             <button class="btn bg-primary text-light"><a routerLink="loaneligible"  class="btn-dec card-title" style="width: 50px;height: 10px;">Check </a></button>
+                             <button class="btn bg-primary text-light"><a routerLink="loaneligible"  class="btn-dec card-title" style="width: 50px;height: 10px;font-size: 18px;">Check </a></button>
                         </div>
                     </div>
                 </div>
@@ -65,7 +65,7 @@
                         </div>
                           <h4 class="card-title">Loan Calculator</h4>
                           <p>Calculate your Loan EMI based on different loan, for specific amount, tenure and rate of interest. Our Bank provide best interest rate.</p><hr>
-                          <button class="btn bg-primary text-light"><a (click)="navigateToCalc()"  class="btn-dec card-title" style="width: 50px;height: 10px;">check</a></button>
+                          <button class="btn bg-primary text-light"><a (click)="navigateToCalc()"  class="btn-dec card-title" style="width: 50px;height: 10px;font-size: 18px;">check</a></button>
                           
                       </div>
                   </div>
@@ -79,7 +79,7 @@
                           </div>
                             <h4 class="card-title">Loan</h4>
                             <p>We offer a wide range of loan options to suit your unique needs and financial situation ,we have the right loan for you with best interest options.</p><hr>
-                            <button class="btn bg-primary text-light"><a routerLink="loantype"  class="btn-dec card-title" style="width: 50px;height: 10px;">Apply </a></button>
+                            <button class="btn bg-primary text-light"><a routerLink="loantype"  class="btn-dec card-title" style="width: 50px;height: 10px;font-size: 18px;">Apply </a></button>
                             
                         </div>
                     </div>
@@ -93,7 +93,7 @@
                           </div>
                             <h4 class="card-title">Loan Status</h4>
                             <p>Track your Loan application and know step by step  updates  about your application and build a better financial status.</p><hr>
-                            <button class="btn bg-primary text-light"><a type="button"  class="btn-dec card-title" data-bs-toggle="modal" data-bs-target="#exampleModal" style="width: 50px;height: 10px;">View</a></button>
+                            <button class="btn bg-primary text-light"><a type="button"  class="btn-dec card-title" data-bs-toggle="modal" data-bs-target="#exampleModal" style="width: 50px;height: 10px;font-size: 18px;">View</a></button>
                         </div>
                     </div>
                 </div>   
