--- a/src/app/components/client/loantype/loantype.component.html
+++ b/src/app/components/client/loantype/loantype.component.html
@@ -46,7 +46,7 @@
                   <div class="card-body">
                     <img src="https://cdn-icons-png.flaticon.com/128/9172/9172420.png" style="height:80px;width: 80px;">
                       <h5 class="card-title">Personal Loan</h5>
-                      <p class="lead" style="font-size: 14px;">Whether you're planning a dream vacation,  or facing unexpected expenses, we're here to help you achieve your goals  .we make it simpler for you to access the funds you need to turn your aspirations into reality. </p>
+                      <p class="lead" style="font-size: 14px;">Whether you're planning a dream vacation,  or facing unexpected expenses, we're here to help you achieve your goals  .we make it simpler for you to access the funds you need to turn your aspirations into reality and to build bright future. </p>
                   </div>
               </div>
           </div>
