--- a/src/app/components/client/loan-form/loan-form.component.html
+++ b/src/app/components/client/loan-form/loan-form.component.html
@@ -10,7 +10,7 @@
             <div class="row">
                 <div class="col-lg-2 col-md-2 col-0"></div>
                 <div class="col-lg-8 col-md-8 col-12">
-                    <div class="row">
+                    <div class="row" style="font-family:inherit;">
                     <div class="col-lg-9 col-md-9 col-sm-8 col-8">
                         <h4 class="header-title">ALPHA BANK</h4>
                     <p class="font">HSR layout,2nd Street ,Bangalore,5762001</p>
@@ -110,10 +110,6 @@
                     <div class="main-container" >
                         <p class="title">Work Experience</p>
                         <div class="sub-container"><p class="content">{{this.users["workExp"]}}</p></div>
-                    </div>
-                    <div class="main-container" >
-                        <p class="title">Monthly Income</p>
-                        <div class="sub-container"><p class="content">Rs.{{this.loans["monthlyIncome"]}}</p></div>
                     </div>
                     <div class="main-container" >
                         <p class="title">Annual Income</p>
@@ -282,7 +278,7 @@
         </div>
         <div class="col-lg-1 col-md-2 col-0"></div>
         </div>
-        <div class="privacy text-center"><p style="padding-top: 10px;">Privacy Policy:The Bank recognizes the expectations of its customers with regard to privacy, confidentiality and security of their personal information that resides with the Bank. Keeping personal information of customers secure and using it solely for activities related to the Bank and preventing any misuse thereof is a top priority of the Bank. The Bank has adopted the privacy policy aimed at protecting the personal information entrusted and disclosed by the customers. </p> <P style="margin-left: 10px;font-size: larger;text-align: center;">©ALPHABANK_2023-2024 </P></div>   
+        <div class="privacy text-center"><p style="padding-top: 10px;font-family:inherit;">Privacy Policy:The Bank recognizes the expectations of its customers with regard to privacy, confidentiality and security of their personal information that resides with the Bank. Keeping personal information of customers secure and using it solely for activities related to the Bank and preventing any misuse thereof is a top priority of the Bank. The Bank has adopted the privacy policy aimed at protecting the personal information entrusted and disclosed by the customers. </p> <P style="margin-left: 10px;font-size: larger;text-align: center;">©ALPHABANK_2023-2024 </P></div>   
         </div>
         <ngx-loading [show]="loading" [config]="{ backdropBorderRadius: '3px' }"></ngx-loading>
 </div>
