--- a/src/app/components/client/home/home.component.html
+++ b/src/app/components/client/home/home.component.html
@@ -49,7 +49,7 @@
                     <div class="card text-light text-center bg-white pb-2">
                         <div class="card-body text-dark">
                           <div class="img-area mb-4">
-                              <img src="https://leverageedublog.s3.ap-south-1.amazonaws.com/blog/wp-content/uploads/2020/01/18184732/GATE-Eligibility.png" class="img-fluid" alt="">
+                              <img src="https://leverageedublog.s3.ap-south-1.amazonaws.com/blog/wp-content/uploads/2020/01/18184732/GATE-Eligibility.png" class="img-fluid" alt="" style="height:185px;width: 100%;">
                           </div>
                             <h4 class="card-title">Check Eligibilty</h4>
                             <p>Eligibility criteria to get a loan varies based on the type of loan.So check  eligibility and apply for the right loan with better interest rate .</p><hr>
@@ -75,10 +75,10 @@
                     <div class="card text-light text-center bg-white pb-2">
                         <div class="card-body text-dark">
                           <div class="img-area mb-4">
-                              <img src="https://paytmblogcdn.paytm.com/wp-content/uploads/2021/07/Creditcard_12_Credit-Card-Loan-Vs-Personal-Loan-800x500.png" class="img-fluid" alt="">
+                              <img src="https://paytmblogcdn.paytm.com/wp-content/uploads/2021/07/Creditcard_12_Credit-Card-Loan-Vs-Personal-Loan-800x500.png" class="img-fluid" alt="" style="height:185px;width: 100%;">
                           </div>
                             <h4 class="card-title">Loan</h4>
-                            <p>We offer a wide range of loan options to suit your unique needs and financial situation ,we have the right loan for you with best interest options.</p><hr>
+                            <p>We offer a wide range of loan options to suit your unique needs and financial situation ,we have the right loan for you with best interest.</p><hr>
                             <button class="btn bg-primary text-light"><a routerLink="loantype"  class="btn-dec card-title" style="width: 50px;height: 10px;font-size: 18px;">Apply </a></button>
                             
                         </div>
@@ -89,7 +89,7 @@
                     <div class="card text-light text-center bg-white pb-2">
                         <div class="card-body text-dark">
                           <div class="img-area mb-4">
-                              <img src="https://img.freepik.com/premium-vector/time-is-money-business-finance-concept-quick-payment-clock-cash-fast-loan-easy-credit-time-money-saving-timer-finance-quick-money-3d-rendering-vector-illustration_165488-3904.jpg" class="img-fluid" alt="">
+                              <img src="https://img.freepik.com/premium-vector/time-is-money-business-finance-concept-quick-payment-clock-cash-fast-loan-easy-credit-time-money-saving-timer-finance-quick-money-3d-rendering-vector-illustration_165488-3904.jpg" class="img-fluid" alt="" style="height:185px;width: 100%;">
                           </div>
                             <h4 class="card-title">Loan Status</h4>
                             <p>Track your Loan application and know step by step  updates  about your application and build a better financial status.</p><hr>
