--- a/src/app/components/client/loancaltr/loancaltr.component.html
+++ b/src/app/components/client/loancaltr/loancaltr.component.html
@@ -82,15 +82,11 @@
             <small class="error">Enter proper credentials</small>
 
           </ng-container>
-
-        </div>
-
        
-
+        </div>
       </div>
-
     </form>
-
+    <button (click)="onSubmit()" class="calculate-btn1" style="margin-left: 5px;">CALCULATE</button>
   </div>
 
 
@@ -119,9 +115,6 @@
 
       </div>
 
-
-
-
       <div class="total-amount">
 
         <h3>Total Amount</h3>
@@ -133,15 +126,9 @@
 
 
 
-      <button (click)="onSubmit()" class="calculate-btn1">CALCULATE</button>
+      <!-- <button (click)="onSubmit()" class="calculate-btn1">CALCULATE</button> -->
 
-      <!-- <button  (click)="routeToLoanForm()" class="calculate-btn2">APPLY LOAN</button> -->
-
-      <!-- <button  class="calculate-btn2">APPLY LOAN</button>  -->
-
-      <!-- <button class="btn bg-primary text-light"><a routerLink="Loanstatus"  class="btn-dec">View now</a></button>
-
-        <button routerLink="Loantype">Go to Calculator</button> -->
+      
 
     </div>
 
